# alpasim

./: .dockerignore  .gitignore  Dockerfile  README.md  dds_migration.md  dds_migration_plan.md  distributed_sim_guide.md  grpc_proto_services.md  grpc_topology.md  pyproject.toml  setup_local_env.sh
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
run_distributed/: docker-compose.yaml
src/controller/alpasim_controller/: server.py  system.py  system_manager.py
src/dds/: pyproject.toml
src/dds/alpasim_dds/: participant.py  qos.py  transport.py
src/dds/alpasim_dds/endpoints/: controller.py  controller_server.py  driver.py  driver_server.py  physics.py  physics_server.py
src/dds/alpasim_dds/types/: camera.py  common.py  controller.py  egodriver.py  physics.py
src/driver/src/alpasim_driver/: main.py
src/driver/src/alpasim_driver/models/: ar1_model.py
src/eval/src/eval/: video_reasoning_overlay_utils.py
src/physics/alpasim_physics/: server.py  utils.py
src/runtime/alpasim_runtime/: validation.py
src/runtime/alpasim_runtime/services/: controller_service.py  driver_service.py  physics_service.py  service_base.py
src/runtime/alpasim_runtime/simulate/: __main__.py
src/utils/: pyproject.toml
src/utils/alpasim_utils/: dds_to_proto.py  polyline.py  qvec.py  scenario.py  trajectory.py
src/utils/tests/: test_dds_to_proto.py
